# flask-vite-stimulus

./: Makefile  README.md  pyproject.toml
src/: app.py
src/templates/: _layout.html  clipboard.html  content-loader.html  hello.html  slideshow.html  tabs.html
vite/: package.json  vite.config.js
vite/src/: index.js
vite/src/controllers/: clipboard_controller.js  content_loader_controller.js  hello_controller.js  slideshow_controller.js  tabs_controller.js
